--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 libxml2-utils
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3
 
       - name: Get latest Chrome version
         id: chrome_version
@@ -47,15 +47,15 @@ jobs:
 
       - name: Install Chrome and ChromeDriver
         run: |
-          echo "Downloading Chrome"
+          echo "Downloading Chrome $CHROME_VERSION"
           curl -sL -o chrome.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chrome-linux64.zip"
-          unzip chrome.zip
+          unzip -q chrome.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
 
-          echo "Downloading ChromeDriver"
+          echo "Downloading ChromeDriver $CHROME_VERSION"
           curl -sL -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
-          unzip chromedriver.zip
+          unzip -q chromedriver.zip
           chmod +x chromedriver-linux64/chromedriver
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
 
@@ -64,11 +64,19 @@ jobs:
           echo "Downloading Katalon Studio Engine version $KATALON_VERSION"
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          echo "After extraction, list workspace contents:"
+          ls -la $GITHUB_WORKSPACE
+          echo "Listing extracted Katalon engine directory:"
           ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION
+
+          echo "Replacing bundled ChromeDriver with system version"
+          cp /usr/local/bin/chromedriver \
+            $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/configuration/resources/drivers/chromedriver_linux64/chromedriver
 
       - name: Run Katalon Test Suite
         run: |
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
+          echo "Using KATALON_DIR = $KATALON_DIR"
           chmod +x "$KATALON_DIR/katalonc"
 
           "$KATALON_DIR/katalonc" -noSplash \
@@ -79,36 +87,11 @@ jobs:
             -executionProfile=default \
             -browserType="$BROWSER" \
             -apiKey="${{ secrets.KATALON_API_KEY }}" \
-            --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
-            --config webui.autoUpdateDrivers=true
-
-      - name: Show test summary
-        run: |
-          REPORT_DIR=$(find $GITHUB_WORKSPACE/Reports -type d -name "*DemoSuite*" | sort | tail -1)
-          echo "Looking at reports in: $REPORT_DIR"
-
-          if [ -f "$REPORT_DIR/JUnit_Report.xml" ]; then
-            TESTS=$(xmllint --xpath "string(/testsuite/@tests)" $REPORT_DIR/JUnit_Report.xml)
-            FAILURES=$(xmllint --xpath "string(/testsuite/@failures)" $REPORT_DIR/JUnit_Report.xml)
-            ERRORS=$(xmllint --xpath "string(/testsuite/@errors)" $REPORT_DIR/JUnit_Report.xml)
-            SKIPPED=$(xmllint --xpath "string(/testsuite/@skipped)" $REPORT_DIR/JUnit_Report.xml)
-            PASSED=$((TESTS - FAILURES - ERRORS - SKIPPED))
-
-            echo "===================="
-            echo " Test Summary"
-            echo "===================="
-            echo " Total:   $TESTS"
-            echo " Passed:  $PASSED"
-            echo " Failed:  $FAILURES"
-            echo " Errors:  $ERRORS"
-            echo " Skipped: $SKIPPED"
-            echo "===================="
-          else
-            echo "JUnit_Report.xml not found!"
-          fi
+            --config -webui.autoUpdateDrivers=true
 
       - name: Archive Reports
         uses: actions/upload-artifact@v4
         with:
           name: katalon-reports
-          path: $GITHUB_WORKSPACE/Reports/**
+          path: |
+            $GITHUB_WORKSPACE/Reports/**
