--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 libxml2-utils
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 xmllint
 
       - name: Get latest Chrome version
         id: chrome_version
@@ -63,10 +63,6 @@ jobs:
           echo "Downloading Katalon Studio Engine version $KATALON_VERSION"
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
-          echo "After extraction, list workspace contents:"
-          ls -la $GITHUB_WORKSPACE
-          echo "Listing extracted Katalon engine directory:"
-          ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION
           echo "Replacing bundled ChromeDriver with system version"
           cp /usr/local/bin/chromedriver \
             $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/configuration/resources/drivers/chromedriver_linux64/chromedriver
@@ -74,7 +70,6 @@ jobs:
       - name: Run Katalon Test Suite
         run: |
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
-          echo "Using KATALON_DIR = $KATALON_DIR"
           chmod +x "$KATALON_DIR/katalonc"
           "$KATALON_DIR/katalonc" -noSplash \
             -runMode=console \
@@ -86,7 +81,14 @@ jobs:
             -apiKey="${{ secrets.KATALON_API_KEY }}" \
             --config -webui.autoUpdateDrivers=true
 
-      - name: Show Test Pass/Fail Summary
+      - name: Archive Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: katalon-reports
+          path: |
+            $GITHUB_WORKSPACE/Reports/**
+
+      - name: Parse JUnit XML and show test summary
         run: |
           REPORT_DIR="$GITHUB_WORKSPACE/Reports"
           XML_FILE=$(find "$REPORT_DIR" -name '*.xml' | head -n 1)
@@ -94,10 +96,10 @@ jobs:
           if [ -f "$XML_FILE" ]; then
             echo "JUnit XML report found at: $XML_FILE"
 
-            TOTAL=$(xmllint --xpath "string(count(/testsuite/testcase))" "$XML_FILE")
-            PASSED=$(xmllint --xpath "string(count(/testsuite/testcase[not(failure) and not(error)]))" "$XML_FILE")
-            FAILED=$(xmllint --xpath "string(count(/testsuite/testcase[failure or error]))" "$XML_FILE")
-            SKIPPED=$(xmllint --xpath "string(count(/testsuite/testcase/skipped))" "$XML_FILE")
+            TOTAL=$(xmllint --xpath "count(//*[local-name()='testcase'])" "$XML_FILE")
+            PASSED=$(xmllint --xpath "count(//*[local-name()='testcase'][not(*[local-name()='failure']) and not(*[local-name()='error']) and not(*[local-name()='skipped'])])" "$XML_FILE")
+            FAILED=$(xmllint --xpath "count(//*[local-name()='testcase']/*[local-name()='failure' or local-name()='error'])" "$XML_FILE")
+            SKIPPED=$(xmllint --xpath "count(//*[local-name()='testcase']/*[local-name()='skipped'])" "$XML_FILE")
 
             echo "===== Test Summary ====="
             echo "Total: $TOTAL"
@@ -112,12 +114,6 @@ jobs:
             fi
           else
             echo "No JUnit XML report found."
+            exit 1
           fi
-        shell: bash
-
-      - name: Archive Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: katalon-reports
-          path: |
-            $GITHUB_WORKSPACE/Reports/**
+        shell: /usr/bin/bash
