--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 xmllint
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3
 
       - name: Get latest Chrome version
         id: chrome_version
@@ -52,6 +52,7 @@ jobs:
           unzip -q chrome.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
+
           echo "Downloading ChromeDriver $CHROME_VERSION"
           curl -sL -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
           unzip -q chromedriver.zip
@@ -63,6 +64,11 @@ jobs:
           echo "Downloading Katalon Studio Engine version $KATALON_VERSION"
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          echo "After extraction, list workspace contents:"
+          ls -la $GITHUB_WORKSPACE
+          echo "Listing extracted Katalon engine directory:"
+          ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION
+
           echo "Replacing bundled ChromeDriver with system version"
           cp /usr/local/bin/chromedriver \
             $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/configuration/resources/drivers/chromedriver_linux64/chromedriver
@@ -70,7 +76,9 @@ jobs:
       - name: Run Katalon Test Suite
         run: |
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
+          echo "Using KATALON_DIR = $KATALON_DIR"
           chmod +x "$KATALON_DIR/katalonc"
+
           "$KATALON_DIR/katalonc" -noSplash \
             -runMode=console \
             -projectPath="$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH" \
@@ -87,33 +95,3 @@ jobs:
           name: katalon-reports
           path: |
             $GITHUB_WORKSPACE/Reports/**
-
-      - name: Parse JUnit XML and show test summary
-        run: |
-          REPORT_DIR="$GITHUB_WORKSPACE/Reports"
-          XML_FILE=$(find "$REPORT_DIR" -name '*.xml' | head -n 1)
-
-          if [ -f "$XML_FILE" ]; then
-            echo "JUnit XML report found at: $XML_FILE"
-
-            TOTAL=$(xmllint --xpath "count(//*[local-name()='testcase'])" "$XML_FILE")
-            PASSED=$(xmllint --xpath "count(//*[local-name()='testcase'][not(*[local-name()='failure']) and not(*[local-name()='error']) and not(*[local-name()='skipped'])])" "$XML_FILE")
-            FAILED=$(xmllint --xpath "count(//*[local-name()='testcase']/*[local-name()='failure' or local-name()='error'])" "$XML_FILE")
-            SKIPPED=$(xmllint --xpath "count(//*[local-name()='testcase']/*[local-name()='skipped'])" "$XML_FILE")
-
-            echo "===== Test Summary ====="
-            echo "Total: $TOTAL"
-            echo "Passed: $PASSED"
-            echo "Failed: $FAILED"
-            echo "Skipped: $SKIPPED"
-            echo "========================"
-
-            if [ "$FAILED" -gt 0 ]; then
-              echo "Some tests failed."
-              exit 1
-            fi
-          else
-            echo "No JUnit XML report found."
-            exit 1
-          fi
-        shell: /usr/bin/bash
