--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -24,7 +24,6 @@ jobs:
         run: |
           echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
           echo "KATALON_VERSION = $KATALON_VERSION"
-          echo "Expected Katalon engine directory: $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
           ls -la $GITHUB_WORKSPACE
 
       - name: Set up Java 17
@@ -36,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 libxml2-utils
 
       - name: Get latest Chrome version
         id: chrome_version
@@ -47,13 +46,10 @@ jobs:
 
       - name: Install Chrome and ChromeDriver
         run: |
-          echo "Downloading Chrome $CHROME_VERSION"
           curl -sL -o chrome.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chrome-linux64.zip"
           unzip -q chrome.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
-
-          echo "Downloading ChromeDriver $CHROME_VERSION"
           curl -sL -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
           unzip -q chromedriver.zip
           chmod +x chromedriver-linux64/chromedriver
@@ -61,24 +57,14 @@ jobs:
 
       - name: Download and extract Katalon Studio Engine
         run: |
-          echo "Downloading Katalon Studio Engine version $KATALON_VERSION"
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
-          echo "After extraction, list workspace contents:"
-          ls -la $GITHUB_WORKSPACE
-          echo "Listing extracted Katalon engine directory:"
-          ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION
-
-          echo "Replacing bundled ChromeDriver with system version"
-          cp /usr/local/bin/chromedriver \
-            $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/configuration/resources/drivers/chromedriver_linux64/chromedriver
+          cp /usr/local/bin/chromedriver $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/configuration/resources/drivers/chromedriver_linux64/chromedriver
 
       - name: Run Katalon Test Suite
         run: |
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
-          echo "Using KATALON_DIR = $KATALON_DIR"
           chmod +x "$KATALON_DIR/katalonc"
-
           "$KATALON_DIR/katalonc" -noSplash \
             -runMode=console \
             -projectPath="$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH" \
@@ -89,9 +75,37 @@ jobs:
             -apiKey="${{ secrets.KATALON_API_KEY }}" \
             --config -webui.autoUpdateDrivers=true
 
-      - name: Archive Reports
+      - name: Archive Katalon Reports
         uses: actions/upload-artifact@v4
         with:
           name: katalon-reports
-          path: |
-            $GITHUB_WORKSPACE/Reports/**
+          path: $GITHUB_WORKSPACE/Reports/**
+
+      - name: Show Test Pass/Fail Counts
+        run: |
+          REPORT_DIR="$GITHUB_WORKSPACE/Reports"
+          XML_FILE=$(find "$REPORT_DIR" -name '*.xml' | head -n 1)
+
+          if [ -f "$XML_FILE" ]; then
+            echo "JUnit XML report found at: $XML_FILE"
+
+            TOTAL=$(xmllint --xpath "count(//*[local-name()='testcase'])" "$XML_FILE")
+            PASSED=$(xmllint --xpath "count(//*[local-name()='testcase'][not(*[local-name()='failure']) and not(*[local-name()='error']) and not(*[local-name()='skipped'])])" "$XML_FILE")
+            FAILED=$(xmllint --xpath "count(//*[local-name()='testcase']/*[local-name()='failure' or local-name()='error'])" "$XML_FILE")
+            SKIPPED=$(xmllint --xpath "count(//*[local-name()='testcase']/*[local-name()='skipped'])" "$XML_FILE")
+
+            echo "===== Test Summary ====="
+            echo "Total: $TOTAL"
+            echo "Passed: $PASSED"
+            echo "Failed: $FAILED"
+            echo "Skipped: $SKIPPED"
+            echo "========================"
+
+            if [ "$FAILED" -gt 0 ]; then
+              echo "Some tests failed."
+              exit 1
+            fi
+          else
+            echo "No JUnit XML report found."
+            exit 1
+          fi
