--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4 # Using the latest version of the checkout action
+        uses: actions/checkout@v4
 
       - name: Debug — show workspace & version vars
         run: |
@@ -41,7 +41,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 libxml2-utils
 
-      # This is a robust way to avoid Chrome/ChromeDriver version mismatches.
       - name: Get latest Chrome version
         id: chrome_version
         run: |
@@ -51,13 +50,11 @@ jobs:
 
       - name: Install Chrome and ChromeDriver
         run: |
-          # Download and set up Chrome
           curl -sL -o chrome.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chrome-linux64.zip"
           unzip -q chrome.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
           
-          # Download and set up ChromeDriver
           curl -sL -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
           unzip -q chromedriver.zip
           chmod +x chromedriver-linux64/chromedriver
@@ -65,17 +62,14 @@ jobs:
 
       - name: Download and extract Katalon Studio Engine
         run: |
-          # Download the specified version of Katalon Studio Engine
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           
-          # IMPORTANT: Copy the just-installed ChromeDriver to the Katalon directory to ensure version compatibility.
           cp /usr/local/bin/chromedriver $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/configuration/resources/drivers/chromedriver_linux64/chromedriver
 
       - name: Run Katalon Test Suite
         run: |
-          # The Katalon test run will generate raw report files.
-          # For Allure, it needs to be configured in the Katalon project to output JSON files to 'allure-results'.
+          # Use the allure=true flag to tell Katalon to generate Allure results.
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
           chmod +x "$KATALON_DIR/katalonc"
           
@@ -87,16 +81,23 @@ jobs:
             -executionProfile=default \
             -browserType="$BROWSER" \
             -apiKey="${{ secrets.KATALON_API_KEY }}" \
-            --config -webui.autoUpdateDrivers=true
+            --config -webui.autoUpdateDrivers=true \
+            -allure=true
+
+      # Debug step to verify that the allure-results folder is populated.
+      - name: Debug - List Allure Results Directory
+        run: |
+          echo "Contents of allure-results:"
+          ls -la allure-results || echo "allure-results directory does not exist or is empty."
 
       # ⬇️ ===== ALLURE REPORT GENERATION ===== ⬇️
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@v1.7
-        if: always() # This ensures the report is generated even if tests fail
+        if: always()
         with:
-          # Use the correct input names as per the action's documentation.
-          allure_results: allure-results 
-          allure_report: allure-report # This is the directory where the HTML report will be generated.
+          # Using the correct input names as per the action's documentation.
+          allure_results: allure-results
+          allure_report: allure-report
 
       - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v4
@@ -115,26 +116,22 @@ jobs:
           name: katalon-reports
           path: |
             Reports/
-            !Reports/**/*.html # Exclude HTML files if you only want raw data
+            !Reports/**/*.html
             !Reports/**/*.csv
 
       - name: Show Test Pass/Fail Counts in Logs
         if: always()
         run: |
           REPORT_DIR="$GITHUB_WORKSPACE/Reports"
-          # Find the main JUnit_Report.xml file
           XML_FILE=$(find "$REPORT_DIR" -name 'JUnit_Report.xml' | head -n 1)
 
           if [ -f "$XML_FILE" ]; then
             echo "JUnit XML report found at: $XML_FILE"
-
-            # Parse the XML to get test counts
             TOTAL=$(xmllint --xpath "count(//testcase)" "$XML_FILE")
             PASSED=$(xmllint --xpath "count(//testcase[not(failure) and not(error) and not(skipped)])" "$XML_FILE")
             FAILED=$(xmllint --xpath "count(//testcase[failure or error])" "$XML_FILE")
             SKIPPED=$(xmllint --xpath "count(//testcase[skipped])" "$XML_FILE")
 
-            # Print a summary to the GitHub Actions log
             echo "===== Test Summary ====="
             echo "Total: $TOTAL"
             echo "Passed: $PASSED"
